card mobile layout bug fixed

--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,9 @@ body {
 
 .u-margin-bottom-big {
   margin-bottom: 8rem !important; }
+  @media (max-width: 56.25em) {
+    .u-margin-bottom-big {
+      margin-bottom: 5rem !important; } }
 
 .u-margin-bottom-medium {
   margin-bottom: 4rem !important; }
@@ -347,6 +350,41 @@ body {
   .card__price-value {
     font-size: 8rem;
     font-weight: 200; }
+  @media (max-width: 56.25em) {
+    .card {
+      height: auto;
+      box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.25); }
+      .card__side {
+        height: auto;
+        background-color: #FFF;
+        position: relative; }
+        .card__side--front {
+          border-bottom-left-radius: 0;
+          border-bottom-right-radius: 0;
+          padding-bottom: 4rem;
+          box-shadow: none; }
+        .card__side--back {
+          transform: rotateY(0);
+          border-top-left-radius: 0;
+          border-top-right-radius: 0;
+          clip-path: polygon(0% 10%, 100% 0%, 100% 100%, 0% 100%);
+          margin-top: -10%;
+          padding-top: 4rem; }
+      .card:hover .card__side--front {
+        transform: rotateY(0); }
+      .card__cta {
+        position: relative;
+        top: 0%;
+        left: 0;
+        transform: translate(0%);
+        width: 100%;
+        border-radius: none;
+        padding: 4rem;
+        margin-bottom: 6rem; }
+      .card__price-box {
+        margin-bottom: 3rem; }
+      .card__price-value {
+        font-size: 6rem; } }
 
 .composition {
   position: relative; }
@@ -358,15 +396,34 @@ body {
     z-index: 10;
     transition: all .2s;
     outline-offset: 1rem; }
+    @media (max-width: 56.25em) {
+      .composition__photo {
+        float: left;
+        position: relative;
+        width: 33.333333333%;
+        box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2); } }
     .composition__photo--p1 {
       left: 0;
       top: -2rem; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p1 {
+          top: 1rem;
+          transform: scale(1.2); } }
     .composition__photo--p2 {
       right: 0;
       top: 2rem; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p2 {
+          top: 0;
+          transform: scale(1.3); } }
     .composition__photo--p3 {
       left: 20%;
       top: 15rem; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p3 {
+          top: 0;
+          left: 0;
+          transform: scale(1.1); } }
     .composition__photo:hover {
       outline: 1rem solid #0ba03d;
       transform: scale(1.3) translateY(-0.5rem);
@@ -383,6 +440,9 @@ body {
   border-radius: 1.5rem;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   height: 45rem; }
+  @media (max-width: 56.25em) {
+    .feature-box {
+      padding: 2rem; } }
   .feature-box__icon {
     font-size: 6rem;
     margin-bottom: .5rem;
@@ -392,6 +452,9 @@ body {
     background-clip: text;
     color: transparent;
     transition: transform 1s; }
+    @media (max-width: 56.25em) {
+      .feature-box__icon {
+        margin: 0; } }
   .feature-box:hover {
     transform: translateY(-1.5rem) scale(1.1); }
 
