--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -7,6 +7,11 @@
     box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
     height: 45rem;
 
+    @include respond(tab-port){
+        padding: 2rem;
+
+    }
+
     &__icon {
         font-size: 6rem;
         margin-bottom: .5rem;
@@ -16,6 +21,11 @@
         background-clip: text;
         color:transparent;
         transition: transform 1s;
+
+        @include respond(tab-port){
+            margin: 0;
+            
+        }
     }
 
     &:hover {
